force-app/main/default/objects/Financial_Summary__c/Financial_Summary__c.object-meta.xml
<CustomObject>
    <label>Financial Summary</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Financial Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Summaries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>