force-app/main/default/objects/Financial_Summary__c/fields/All_Spend__c.field-meta.xml
<CustomField>
    <fullName>All_Spend__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>All Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>