force-app/main/default/objects/Financial_Summary__c/fields/Common_Goods_and_services_and_CCS_share__c.field-meta.xml
<CustomField>
    <fullName>Common_Goods_and_services_and_CCS_share__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Common Goods and services and CCS share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>