force-app/main/default/objects/Financial_Summary__c/fields/Direct_Spend__c.field-meta.xml
<CustomField>
    <fullName>Direct_Spend__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Direct Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>