force-app/main/default/objects/Financial_Summary__c/fields/Financial_year__c.field-meta.xml
<CustomField>
    <fullName>Financial_year__c</fullName>
    <label>Financial Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>