force-app/main/default/objects/Financial_Summary__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>