force-app/main/default/objects/Financial_Summary__c/fields/SAM_Plan__c.field-meta.xml
<CustomField>
    <fullName>SAM_Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SAM Plan</label>
    <referenceTo>SAM_Plan__c</referenceTo>
    <relationshipLabel>Financial Summaries</relationshipLabel>
    <relationshipName>Financial_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>